src/domkit/fanCss/Combo.css
//
// Copyright (c) 2016, Brian Frank and Andy Frank
// Licensed under the Academic Free License version 3.0
//
// History:
//   1 Mar 2016  Andy Frank  Creation
//

div.domkit-Combo {
  box-sizing: border-box;
  display: inline-block;
}

div.domkit-Combo input.domkit-TextField {
  width: calc(100% - 23px);
}

div.domkit-Combo div.domkit-Button {
  border-left: none;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  width: 23px;
  padding: 0;
}

div.domkit-Combo div.domkit-ListButton:before { right: 8px; }
div.domkit-Combo div.domkit-ListButton:after  { right: 8px; }

